[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Nov1c444 <857526207@qq.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
